# mag_tester

./: AlgHistogram.cpp  AlgHistogram.hpp  CMakeLists.txt  Definitions.hpp  EnergyMap.hpp  EneryMap.hpp  HoughTransform.cpp  HoughTransform.hpp  Preparator.cpp  Preparator.hpp  Tester.hpp  main.cpp
